<resources>
    <string name="app_name">Canteen</string>
    <string name="let_s_get_something">Let’s get something</string>
    <string name="good_to_see_you_back">Good to see you back</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_account_to_continue">Create account to continue!</string>
    <string name="get_otp">Get Otp</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="student_info">Student Info</string>
    <string name="enter_below_details">Enter below details</string>
    <string name="student_name">Student Name</string>
    <string name="student_class">Student Class</string>
    <string name="section">Section</string>
    <string name="roll_number">Roll Number</string>
    <string name="upload_id_card">Upload ID Card</string>
    <string name="shift_info">Shift Info</string>
    <string name="shift">Shift</string>
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>
    <string name="retake_photo_blur_issue">(Retake Photo blur issue)</string>
    <string name="upload">Upload</string>
    <string name="forget_password">Forget Password?</string>
    <string name="please_enter_your_registered_email_address_for_recovery_of_your_password">Please enter your registered email address for recovery of your password</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_amp_delicious_n_food"><![CDATA[Food & Delicious\nFood]]></string>
    <string name="lunch_box">Lunch Box</string>
    <string name="popular_items">Popular Items</string>
    <string name="both">Both</string>
    <string name="it_has_survived_not_only_five_centuries_but_also_the_into_electronic_typesetting">It has survived not only five centuries, but also the into electronic typesetting...</string>
    <string name="dolor">$</string>
    <string name="salad">Salad</string>
    <string name="juice">Juice</string>
    <string name="order">Order</string>
    <string name="order_detail">Order Detail</string>
    <string name="_15_jan_2023_at_02_00_pm">15 Jan 2023 at 02:00 Pm</string>
    <string name="notification">Notifications</string>
    <string name="order_has_been_received">Order has been received</string>
    <string name="_09_30am">09:30AM</string>
    <string name="cart">Cart</string>
    <string name="payment_method">Payment Method</string>
    <string name="debit_card">Debit card</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="manage_siblings">Manage Siblings</string>
    <string name="select_address">Select Address</string>
    <string name="gravy_lexo">Gravy Lexo</string>
    <string name="_581_307_6902">(581)-307-6902</string>
    <string name="emma_phillips_gmail_com">emma.phillips@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="bill_details">Bill Details</string>
    <string name="baqar_leax">Baqar Leax</string>
    <string name="dav_1232_street_ny">DAV, 1232 Street , NY</string>
    <string name="items_total">Items Total</string>
    <string name="borys">Borys</string>
    <string name="to_pay">To Pay</string>
    <string name="pay_now">Pay Now</string>
    <string name="lorem_ipsum_is_simply_dummy_text">Lorem Ipsum is simply dummy text</string>
    <string name="the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less">The point of using Lorem Ipsum is that it has a more-or-less</string>
    <string name="chat_support">Chat Support</string>
    <string name="send_message">Send message</string>
    <string name="login_in">Log In</string>
    <string name="Sign_in">Sign In</string>
    <string name="sibling_shift_info">Sibling Shift Info</string>
    <string name="sibling_info">Sibling Info</string>
    <string name="save">Save</string>
    <string name="select_childs_for_food">Select childs for food</string>
    <string name="both_childs">Both Childs</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="enter_code_sent_to_your_number">Enter code sent to\n\your number</string>
    <string name="add_sibling">Add Sibling</string>
    <string name="add_new_card">Add New card</string>
    <string name="_3302">**** **** **** 3302</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="enter_section">Enter Section</string>
    <string name="enter_student_class">Enter Student Class</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_shift">Enter Shift</string>
    <string name="select_school_name">Select School Name</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="select_shift">Select Shift</string>

</resources>