<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/itemIV"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:src="@drawable/item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/let_s_get_something"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemIV" />

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/good_to_see_you_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/titleTV"
                app:layout_constraintTop_toBottomOf="@+id/titleTV" />


            <EditText
                android:id="@+id/etNameUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/cornours_drawable"
                android:fontFamily="@font/poppins_medium"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="50dp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="16sp"
                android:paddingBottom="@dimen/_5sdp"
                android:hint="@string/enter_email_address"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/descriptionTV" />

            <ImageView
                android:id="@+id/emailIV"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/email"
                app:layout_constraintBottom_toBottomOf="@+id/etNameUser"
                app:layout_constraintStart_toStartOf="@+id/etNameUser"
                app:layout_constraintTop_toTopOf="@+id/etNameUser" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/cornours_drawable"
                android:fontFamily="@font/poppins_medium"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="50dp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="50dp"
                android:paddingBottom="@dimen/_5sdp"
                android:hint="@string/enter_password"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/etNameUser" />

            <ImageView
                android:id="@+id/passwordIV"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/password"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword" />


            <ImageView
                android:id="@+id/eye_closeIV"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/eye_close"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword" />

            <ImageView
                android:id="@+id/acceptIV"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/remember_me_empty"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/rememberMeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/acceptIV"
                app:layout_constraintStart_toEndOf="@+id/acceptIV"
                app:layout_constraintTop_toTopOf="@+id/acceptIV" />


            <TextView
                android:id="@+id/signInLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/cornours_drawable"
                android:backgroundTint="@color/red_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rememberMeTV" />


            <TextView
                android:id="@+id/forgetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/forgot_password"
                android:textColor="@color/green"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInLayout" />


            <TextView
                android:id="@+id/DontHaveAnAccountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/SignUpTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/_5sdp"
                android:text="@string/sign_up"
                android:textColor="@color/red_color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/DontHaveAnAccountTV"
                app:layout_constraintStart_toEndOf="@+id/DontHaveAnAccountTV"
                app:layout_constraintTop_toTopOf="@+id/DontHaveAnAccountTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>